Refactor: Update dataloader (DAiSEE support, transforms), organize scripts (train_sh/valid_sh), clean up temporary files

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ debug_samples/
 __pycache__/
 *.pyc
 .DS_Store
+*.pth
+*.log
+analysis_report.txt
+update_log.md
 
 # Temporary Scripts
 run_daisee.sh
